# vscode-workspace

./: .env  README.md  hello.code-workspace
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yml
.devcontainer/proxy/: README.md
.devcontainer/proxy/config/: Caddyfile
.devcontainer/workspace/: .dockerignore  Dockerfile
.devcontainer/workspace/etc/init-image.d/: 01-install-apt-tools  01-update-apt  01-update-apt.sh  02-install-baseline  02-install-baseline.sh  02-install-utilities  03-install-dev-tools  03-set-timezone  03-set-timezone.sh  04-set-timezone  10-install-docker  10-install-docker.sh  11-update-docker-group.disable  20-install-deno  20-install-deno.sh  20-install-rust  30-install-java  30-install-java.sh  31-install-maven  31-install-maven.sh  40-install-rust  40-install-swift.disable  50-install-swift  99-cleanup-apt  99-cleanup-apt.sh
.devcontainer/workspace/etc/init-user.d/: 10-update-docker-group.sh  20-install-rust  20-install-rust.sh
.devcontainer/workspace/etc/post-create.d/: 10-add-git-safe-dirs  60-add-git-safe-dirs.sh
.devcontainer/workspace/etc/post-start.d/: 10-init-docker  10-init-docker.sh
.devcontainer/workspace/home/: .zshenv
.devcontainer/workspace/home/.config/zsh/: .zshrc
.devcontainer/workspace/libexec/: environment_helper
cli/: greet
hello-java/: mvn-run  pom.xml
hello-java/src/main/resources/: log4j2.xml
hello-rs/: Cargo.toml
hello-rs/src/: config.rs  main.rs
hello-rs/src/routes/: api.rs  greeter.rs  html.rs  mod.rs
hello-rs/src/services/: mod.rs
templates/: greeter.html
(+8 files in other folders)
