[package]
name = "hello-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = [] }
tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
