[package]
name = "hello-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14", features = [] }
askama_web = { version = "0.14", features = ["axum-0.8"] }
axum = { version = "0.8", features = [] }
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
